# musiol-rag

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py  detailed_test.py  rag_example.py  rag_example_with_logging.py  sample_data.py
examples/texts/: climate_change.txt  google_acquisition.txt  machine_learning.txt  quantum_computing.txt
src/: config.py
src/api/: rest.py
src/core/: embeddings.py  rag_engine.py
src/database/: postgresql.py
src/musiol_rag/: config.py
src/musiol_rag/api/: schemas.py
src/musiol_rag/core/: chunking.py  embeddings.py  rag.py  retrieval.py
src/musiol_rag/database/: base.py  memory.py  postgresql.py
tests/: test_core.py
