[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musiol-rag"
version = "0.1.0"
description = "A modular Retrieval-Augmented Generation system"
readme = "README.md"
authors = [{ name = "Martin Musiol" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.7.0",
    "numpy>=1.24.3"
]

[project.optional-dependencies]
dev = [
    "black>=21.0",
    "isort>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["musiol_rag*"]

[tool.black]
line-length = 88
target-version = ["py38"] 